--- a/package.json
+++ b/package.json
@@ -13,33 +13,34 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~51.0.0",
-    "expo-linking": "~6.3.1",
-    "expo-location": "~17.0.1",
-    "expo-router": "~3.5.0",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1"
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "expo": "~54.0.0",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.14",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.5.2",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "~0.73.0",
-    "typescript": "^5.1.3",
-    "@testing-library/react-native": "^12.4.2",
     "@testing-library/jest-native": "^5.4.3",
-    "jest": "^29.7.0",
+    "@testing-library/react-native": "^12.4.2",
     "@types/jest": "^29.5.11",
-    "jest-expo": "~51.0.0",
-    "react-test-renderer": "18.2.0"
+    "@types/react": "~19.1.10",
+    "jest": "^29.7.0",
+    "jest-expo": "~54.0.0",
+    "react-test-renderer": "^19.1.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
