--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/react-native": "^12.4.2",
     "@types/jest": "^29.5.11",
     "@types/react": "~19.1.10",
+    "dotenv": "^17.2.3",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.0",
     "react-test-renderer": "^19.1.0",
