--- a/eas.json
+++ b/eas.json
@@ -25,7 +25,7 @@
         "simulator": false
       },
       "android": {
-        "buildType": "aab"
+        "buildType": "app-bundle"
       }
     }
   },
