--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 5.2.0"
+    "version": ">= 5.2.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -12,6 +13,7 @@
     },
     "preview": {
       "distribution": "internal",
+      "node": "20.x",
       "ios": {
         "simulator": false
       },
@@ -21,6 +23,7 @@
     },
     "production": {
       "autoIncrement": true,
+      "node": "20.x",
       "ios": {
         "simulator": false
       },
