--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,7 @@
     },
     "preview": {
       "distribution": "internal",
-      "node": "20.x",
+      "node": "20.18.0",
       "ios": {
         "simulator": false
       },
@@ -23,7 +23,7 @@
     },
     "production": {
       "autoIncrement": true,
-      "node": "20.x",
+      "node": "20.18.0",
       "ios": {
         "simulator": false
       },
