--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "~54.0.0",
+    "expo": "54.0.23",
     "expo-asset": "^12.0.9",
     "expo-constants": "^18.0.10",
     "expo-dev-client": "^6.0.17",
@@ -38,7 +38,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-worklets": "^0.5.2",
+    "react-native-worklets": "0.5.1",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
@@ -54,7 +54,7 @@
     "jest-expo": "~54.0.0",
     "node-fetch": "^2.7.0",
     "react-test-renderer": "^19.1.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
