--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.0",
     "react-native-worklets": "0.5.1",
     "typescript": "~5.3.3"
   },
