--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "54.0.23",
     "expo-asset": "^12.0.9",
+    "expo-blur": "~15.0.7",
     "expo-constants": "^18.0.10",
     "expo-dev-client": "^6.0.17",
     "expo-linking": "~8.0.8",
@@ -35,6 +36,8 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
+    "react-native-purchases": "^9.6.7",
+    "react-native-purchases-ui": "^9.6.7",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
