Add development-device profile for iOS device builds
- New profile allows development builds for physical iOS devices
- Uses developmentClient: true with simulator: false
- Use with: eas build --platform ios --profile development-device

--- a/eas.json
+++ b/eas.json
@@ -15,6 +15,17 @@
         "gradleCommand": ":app:assembleDebug"
       }
     },
+    "development-device": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
+      },
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleDebug"
+      }
+    },
     "preview": {
       "distribution": "internal",
       "node": "20.18.0",
