Add build number increment script and remove autoIncrement
- Remove autoIncrement from eas.json (not supported with app.config.js)
- Add increment-build-number.js script to automatically increment iOS build number
- Add npm script 'increment-build' for easy access
- Increment build number from 7 to 8

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint .",
     "sync:google-maps": "node scripts/sync-google-maps-data.js",
     "sync:google-maps:dry-run": "node scripts/sync-google-maps-data.js --dry-run",
-    "sync:google-maps:force": "node scripts/sync-google-maps-data.js --force"
+    "sync:google-maps:force": "node scripts/sync-google-maps-data.js --force",
+    "increment-build": "node scripts/increment-build-number.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
