Enable photo assets in build and increase EAS resources
- Remove photos from .gitignore to include them in EAS builds
- Increase iOS resource class to m-large for handling large asset bundle (795MB+)
- Keep photos in assetBundlePatterns for bundling
- Photos are already tracked in git (4390 files)

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ web-build/
 *.aab
 *.ipa
 
-# Photos - excluded from build, downloaded to device storage instead
-assets/google-maps-photos/
+# Photos are now included in the build
+# assets/google-maps-photos/
 
