Add automatic build number increment for production builds
- Created build-production.js script that increments build number before building
- Automatically commits build number change before running EAS build
- Added npm scripts: build:production, build:production:ios, build:production:android
- Usage: npm run build:production instead of eas build --profile production

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "sync:google-maps": "node scripts/sync-google-maps-data.js",
     "sync:google-maps:dry-run": "node scripts/sync-google-maps-data.js --dry-run",
     "sync:google-maps:force": "node scripts/sync-google-maps-data.js --force",
-    "increment-build": "node scripts/increment-build-number.js"
+    "increment-build": "node scripts/increment-build-number.js",
+    "build:production": "node scripts/build-production.js --platform=ios",
+    "build:production:ios": "node scripts/build-production.js --platform=ios",
+    "build:production:android": "node scripts/build-production.js --platform=android"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
