Add platform-specific photo bundling: 4 photos for iOS, 2 for Android
- Updated generate-bundled-photo-mapping.js to bundle 4 photos per campground (for iOS)
- Updated .easignore to exclude photos 4-9 from all builds
- Added Platform.OS checks in CampgroundBottomSheet and PhotoViewerModal
- iOS: Uses bundled assets for photos 0-3 (first 4, ~331MB)
- Android: Uses bundled assets only for photos 0-1 (first 2, ~167MB) at runtime
- Regenerated bundledPhotoAssets.ts with 1704 photos (4 per campground)

--- a/.easignore
+++ b/.easignore
@@ -1,4 +1,6 @@
-# Exclude photos beyond the first 2 per campground to reduce bundle size
-# Only photo-0.jpg and photo-1.jpg are bundled, rest load on-demand via API
-assets/google-maps-photos/**/photo-[2-9].jpg
+# Exclude photos beyond the first 4 per campground to reduce bundle size
+# iOS: Uses photos 0-3 (first 4) bundled
+# Android: Uses photos 0-1 (first 2) bundled at runtime to meet 200MB limit
+# Photos 4-9 excluded from all builds, load on-demand via API
+assets/google-maps-photos/**/photo-[4-9].jpg
 
