--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rving-with-bikes",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -26,17 +26,17 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "54.0.23",
+    "expo": "~54.0.30",
     "expo-asset": "^12.0.9",
-    "expo-blur": "~15.0.7",
+    "expo-blur": "~15.0.8",
     "expo-constants": "^18.0.10",
-    "expo-dev-client": "^6.0.17",
-    "expo-linking": "~8.0.8",
-    "expo-location": "~19.0.7",
-    "expo-router": "~6.0.14",
-    "expo-screen-orientation": "^9.0.7",
-    "expo-splash-screen": "^31.0.10",
-    "expo-status-bar": "~3.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-linking": "~8.0.11",
+    "expo-location": "~19.0.8",
+    "expo-router": "~6.0.21",
+    "expo-screen-orientation": "~9.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
@@ -46,7 +46,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.0",
+    "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
     "typescript": "~5.3.3"
   },
@@ -60,7 +60,7 @@
     "dotenv": "^17.2.3",
     "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
-    "jest-expo": "~54.0.0",
+    "jest-expo": "~54.0.16",
     "node-fetch": "^2.7.0",
     "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
