--- a/eas.json
+++ b/eas.json
@@ -40,10 +40,11 @@
       "node": "20.18.0",
       "ios": {
         "simulator": false,
-        "resourceClass": "m-large"
+        "resourceClass": "large"
       },
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "resourceClass": "large"
       },
       "env": {
         "EXPO_NO_METRO_LAZY": "1"
