Add production-apk profile for direct Android installation
- Add production-apk profile that builds APK instead of AAB
- Allows direct installation on Android devices for testing
- Production profile remains as app-bundle for Play Store submission
- Add large resource class to preview profile for consistency

--- a/eas.json
+++ b/eas.json
@@ -33,7 +33,22 @@
         "simulator": false
       },
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "resourceClass": "large"
+      }
+    },
+    "production-apk": {
+      "node": "20.18.0",
+      "ios": {
+        "simulator": false,
+        "resourceClass": "large"
+      },
+      "android": {
+        "buildType": "apk",
+        "resourceClass": "large"
+      },
+      "env": {
+        "EXPO_NO_METRO_LAZY": "1"
       }
     },
     "production": {
