--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-blur": "~15.0.8",
     "expo-constants": "^18.0.10",
     "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
     "expo-router": "~6.0.21",
